<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <include
        android:id="@+id/include2"
        layout="@layout/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/pseudo_hint"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/include2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/pseudo_field"
        android:text="@string/edit_text_hint"/>
    
    <EditText
        android:id="@+id/pseudo_field"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include2"
        android:inputType="text"
        android:autofillHints=""/>

    <TextView
        android:id="@+id/password_hint"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/pseudo_hint"
        app:layout_constraintBottom_toBottomOf="@id/password_field"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/password_text_hint"/>

    <EditText
        android:id="@+id/password_field"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pseudo_field"
        android:inputType="textPassword"
        android:autofillHints=""/>

    <Button
        android:id="@+id/main_confirm_button"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/password_field"
        app:layout_constraintTop_toBottomOf="@id/password_field"/>

    <Button
        android:id="@+id/main_create_user_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/new_user"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@id/main_confirm_button"
        app:layout_constraintTop_toBottomOf="@id/password_field"/>

    
</androidx.constraintlayout.widget.ConstraintLayout>

