<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="10dp">

    <TextView
        android:id="@+id/add_user_pseudo_hint"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/add_user_pseudo_field"
        android:text="@string/edit_text_hint"/>

    <EditText
        android:id="@+id/add_user_pseudo_field"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/add_user_pseudo_hint"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text"
        android:autofillHints=""/>

    <TextView
        android:id="@+id/add_user_password_hint"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/add_user_pseudo_hint"
        app:layout_constraintBottom_toBottomOf="@id/add_user_password_field"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/password_text_hint"/>

    <EditText
        android:id="@+id/add_user_password_field"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/add_user_password_hint"
        app:layout_constraintTop_toBottomOf="@id/add_user_pseudo_field"
        android:inputType="textPassword"
        android:autofillHints=""/>

    <Button
        android:id="@+id/add_user_confirm_button"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:text="@string/create_new_user"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_user_password_field"/>

</androidx.constraintlayout.widget.ConstraintLayout>